# ha-sanyo-z2000

./: .gitignore  CLAUDE.md  LICENSE  README.md  Taskfile.yml  conftest.py  hacs.json  pyproject.toml
.devcontainer/: devcontainer.json
config/: configuration.yaml
custom_components/sanyo_z2000/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  select.py  sensor.py  switch.py  system_health.py
custom_components/sanyo_z2000/translations/: de.json  en.json
docs/: commands.yaml
esphome/: local-config.yaml  sanyo-z2000.yaml  secrets.yaml.example
hardware/: rs232-adapter-housing.stl
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator_io.py  test_diagnostics.py  test_entities.py  test_init.py  test_power_state_mapping.py  test_real_flow.py  test_select_persistence.py  test_switch_optimistic.py  test_system_health.py
tests/__snapshots__/: test_diagnostics.ambr  test_entities.ambr
