[project]
name = "ha-sanyo-z2000"
version = "0.1.0"
requires-python = ">=3.14.2"
# No runtime dependencies — HA discovers the integration via config/custom_components
# (symlink) at runtime. aioesphomeapi is bundled with Home Assistant itself.
dependencies = []

[dependency-groups]
dev = [
    "pytest-homeassistant-custom-component>=0.13.330",
    "pytest-asyncio",
    "ruff",
    "serialx[esphome]>=1.7.0",
    # HA per-integration requirements that get pulled in lazily but the WS API's
    # service-description endpoint imports all base components eagerly, so they
    # must already be present in the venv before HA boots.
    # See: homeassistant/helpers/service.py:_base_components
    "hassil>=3.5.0",
    "home-assistant-intents>=2026.5.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]
